<resources>
    <string name="app_name">BacSiVietVN</string>

    <string name="facebook_app_id">268983446959615</string>
    <string name="fb_login_protocol_scheme">fb268983446959615</string>

    <string name="welcome">Bienvenido</string>
    <string name="cancel_login">The operation was canceled</string>
    <string name="error_login">An error occurred when entering</string>
    <string name="logout">Sign off</string>
    <string name="firebase_error_login">Error logging in, account exists. Try to log in by email / password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_login_android">Login Google</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="phone">phone number 09*********</string>
    <string name="action_continue">Continue</string>
    <string name="verification_code">Verification code</string>
    <string name="verification">Verification</string>
    <string name="btn_resend">Resend vertification code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_group">Group</string>
    <string name="title_help">Help</string>
    <string name="title_chat">Chat</string>
    <string name="title_menu">Menu</string>


    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="instant_validation">credential code null</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="profile_name">Induce Smile</string>
    <string name="country_location">Sweden</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_names">Display name</string>
    <string name="induce_smile">Induce Smile</string>

    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Save edit</string>


    <string name="btn_sign_in_with_email">Sign in with Email/Password</string>
    <string name="btn_sign_in_phone">Sign in with Phone</string>
    <string name="nav_home">Home</string>
    <string name="nav_question">Hỏi Bác Sĩ</string>
    <string name="nav_post">Bài Viết</string>
    <string name="nav_sick">Bệnh</string>
    <string name="nav_drug">Thuốc</string>
    <string name="nav_doctor">Bác Sĩ</string>
    <string name="nav_health_service">Cơ sở Y Tế</string>
    <string name="nav_sale">Khuyến Mãi</string>
    <string name="nav_info">Thông tin ứng dụng</string>
    <string name="slogan_home">Tìm kiếm, tra cứu thông tin thuốc, chăm sóc và khám chữa bệnh dễ dàng, chính xác với hơn 1000 bác sĩ và cơ sở y tế toàn quốc</string>
    <string name="btn_question_free">Hỏi miễn phí</string>
    <string name="btn_question_find">Tìm câu hỏi</string>
    <string name="btn_chat_fast">Chát nhanh</string>
    <string name="btn_drug_discovery">Tra cứu thuốc</string>
    <string name="btn_doctor_call">Gọi bác sĩ</string>
    <string name="btn_service_hearlth">Cơ sở y tế</string>
    <string name="btn_general_examination">Khám tổng quát</string>
    <string name="btn_show_result">Xem kết quả</string>
    <string name="nav_logout">Đăng xuất</string>


    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="btn_register">Register</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="btn_question">Hỏi bác sĩ</string>
    <string name="error_url">Url not exist.</string>


</resources>
