<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_group"
        android:checked="true"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/title_group" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/title_help" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/title_menu" />

</menu>
