<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context="vn.bacsiviet.bacsivietvn.AuthFirebase.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_launcher" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/custom_btn_login"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@android:color/transparent"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <!-- Link to Login Screen -->
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@android:color/transparent"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:visibility="gone" />




        <!-- dang nhap so dien thoai-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_verify_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:hint="@string/hint_verification_code"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_start_verify"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/custom_btn_login"
            android:text="@string/action_continue"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btn_verify_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/custom_btn_login"
            android:text="@string/verify_phone_auth"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_resend"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/custom_btn_login"
            android:text="@string/resend_phone_auth"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <!--button change login-->


        <Button
            android:id="@+id/btn_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/custom_btn_gmail"
            android:text="@string/btn_sign_in_with_email"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sign_in_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/custom_btn_phone"
            android:text="@string/btn_sign_in_phone"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:indeterminate="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
