<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context="vn.bacsiviet.bacsivietvn.FragmentDraw.HomeFragment"
    >

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_weight="6"
       >
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@drawable/slide1"
           android:layout_centerInParent="true"
           
           />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_centerInParent="true"           
           android:layout_marginRight="40dp"
           android:layout_marginLeft="40dp"
           android:gravity="center"
           android:text="@string/slogan_home"
           android:textAlignment="center"
           android:textColor="@color/colorPrimary"
           android:textStyle="bold"
           />

   </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:weightSum="4"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_questtion_free"
                android:layout_width="match_parent"
                android:layout_height="match_parent" 
                android:layout_weight="1"
                android:drawableLeft="@drawable/question_icon"
                android:text="@string/btn_question_free"
                android:background="@drawable/custom_button_home_fragment"
                android:layout_margin="2dp"
                android:paddingLeft="@dimen/_8sdp"
                />

            <Button
                android:id="@+id/btn_question_find"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/help_file_icon"
                android:text="@string/btn_question_find"
                android:background="@drawable/custom_button_home_fragment"
                android:layout_margin="2dp"
                android:paddingLeft="@dimen/_8sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/btn_chat_fast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button_home_fragment"
                android:drawableLeft="@drawable/chat_icon"
                android:paddingLeft="@dimen/_8sdp"
                android:text="@string/btn_chat_fast" />

            <Button
                android:id="@+id/btn_drug_discovery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/medicine_icon"
                android:text="@string/btn_drug_discovery"
                android:background="@drawable/custom_button_home_fragment"
                android:layout_margin="2dp"
                android:paddingLeft="@dimen/_8sdp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_doctor_call"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/phone_icon"
                android:text="@string/btn_doctor_call"
                android:background="@drawable/custom_button_home_fragment"
                android:layout_margin="2dp"
                android:paddingLeft="@dimen/_8sdp"
                />
            <Button
                android:id="@+id/btn_service_hearlth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/location_icon"
                android:text="@string/btn_service_hearlth"
                android:background="@drawable/custom_button_home_fragment"
                android:layout_margin="2dp"
                android:paddingLeft="@dimen/_8sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_general_examination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/doctor_icon"
                android:text="@string/btn_general_examination"
                android:background="@drawable/custom_button_home_fragment"
                android:layout_margin="2dp"
                android:paddingLeft="@dimen/_8sdp"
                />
            <Button
                android:id="@+id/btn_show_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/result_icon"
                android:text="@string/btn_show_result"
                android:background="@drawable/custom_button_home_fragment"
                android:layout_margin="2dp"
                android:paddingLeft="@dimen/_8sdp"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
